--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('mysql:mysql-connector-java')
+	compile ('jackson-datatype-jsr310')
 	//compile ('org.postgresql:postgresql')
 	//compile ('io.springfox:springfox-swagger2:2.7.0')
 	//compile('io.springfox:springfox-swagger-ui:2.7.0')
@@ -36,3 +37,4 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('junit:junit:4.12')
 }
+
