--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.5.13.RELEASE'
+		springBootVersion = '2.0.4.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
@@ -28,7 +29,6 @@ dependencies {
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('mysql:mysql-connector-java')
-	compile ('jackson-datatype-jsr310')
 	//compile ('org.postgresql:postgresql')
 	//compile ('io.springfox:springfox-swagger2:2.7.0')
 	//compile('io.springfox:springfox-swagger-ui:2.7.0')
