--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.datasource.username=kornelia
 spring.datasource.password=kor@1
 
 spring.jpa.database=mysql
-spring.jpa.show-sql=true
+gspring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
